--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: "京都府京都市右京区 嵯峨嵐山周辺"
 description: "京都府京都市右京区 嵯峨嵐山周辺でテイクアウトできるお店"
-data_url: https://docs.google.com/spreadsheets/d/e/2PACX-1vSCB85spT-RivHSJEt8TL9jtywAlT9BvruukvbFOHgWclVyBdbsG8mykWT3ElmcMEZyE-n93TsGQWzj/pub?gid=0&single=true&output=csv
+data_url: https://docs.google.com/spreadsheets/d/13uQ3WvKy5gkdq4eXFdg8l_cjkSaZ_2O-zOXQJfDcjB0/export?format=csv#gid=0
 repository: https://github.com/yoheitaniguchi/sagaarashiyama.iemeshi.jp
 form_url: https://docs.google.com/forms/d/e/1FAIpQLSdhy3JhoQamFPEas9mcyHL9_FJhWS_TTQ5qz34hg6Nsv9VITg/viewform
